<resources>
    <string name="app_name">BitsDashboardAssign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="welcome_admin">Welcome admin</string>
    <string name="_8942">⋮</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="total_prod">Total Prod : %1$d</string>

    // Demo strings
    <string name="description_demo">Description demo</string>
    <string name="demo_name">Demo name</string>

    <string name="all_category">Category</string>
    <string name="subcategory">SubCategory</string>
    <string name="products">Products</string>

    // Dialog mess
    <string name="add_cat">Add Category</string>
    <string name="add_sub_cat">Add SubCategory</string>
    <string name="add_prod">Add Product</string>
    <string name="empty" />
    <string name="error_mess">Add Category</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="my_account">My Account</string>
    <string name="rishabh">Rishabh</string>
    <string name="bits_pan_ass">Bits panindia assignment</string>
    <string name="dashboard_info">DashBoard Info</string>
    <string name="categ_count">Categories:   %1$d</string>
    <string name="sub_cat_count">SubCategories:   %1$d</string>
    <string name="prod_count">Products:   %1$d</string>
</resources>