<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="13dp"
        android:paddingBottom="10dp"
        tools:context=".fragaments.ProfileFragment">


        <TextView
            android:id="@+id/profAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/my_account"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/text_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profMainImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profAccountText" />


        <TextView
            android:id="@+id/profNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:text="@string/rishabh"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/text_20"
            app:layout_constraintStart_toEndOf="@id/profMainImage"
            app:layout_constraintTop_toTopOf="@id/profMainImage" />

        <TextView
            android:id="@+id/profAss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bits_pan_ass"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@id/profNameText"
            app:layout_constraintTop_toBottomOf="@id/profNameText" />

        <TextView
            android:id="@+id/profMyInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dashboard_info"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profMainImage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profFirstBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/profile_boxes_background"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/profMyInfoText">


            <TextView
                android:id="@+id/profCatCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/categ_count"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/text_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/profViewLineOne"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profCatCount"
                android:background="@color/bottom_line" />

            <TextView
                android:id="@+id/profSubCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/sub_cat_count"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/text_14"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profViewLineOne" />

            <View
                android:id="@+id/profViewLineSec"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profSubCount"
                android:background="@color/bottom_line" />

            <TextView
                android:id="@+id/profProdCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/categ_count"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/text_14"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profViewLineSec"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>